--- a/package.json
+++ b/package.json
@@ -25,11 +25,11 @@
     "eslint-plugin-import": "^2.14.0",
     "eslint-plugin-jsx-a11y": "6.1.1",
     "eslint-plugin-react": "^7.11.1",
-    "husky": "^1.0.0-rc.13",
-    "jest": "^23.5.0",
-    "nodemon": "^1.18.3",
-    "prettier": "^1.14.2",
-    "pretty-quick": "^1.6.0",
+    "husky": "^1.1.2",
+    "jest": "^23.6.0",
+    "nodemon": "^1.18.5",
+    "prettier": "^1.14.3",
+    "pretty-quick": "^1.8.0",
     "rimraf": "^2.6.1"
   },
   "dependencies": {},
