Be able to log ga data

--- a/.babelrc
+++ b/.babelrc
@@ -5,7 +5,9 @@
       "module-resolver",
       {
         "root": [],
-        "alias": {}
+        "alias": {
+          "src": "./src"
+        }
       }
     ],
     "transform-object-rest-spread"
