--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
   },
   "dependencies": {
     "cheerio": "^1.0.0-rc.2",
+    "glob": "^7.1.3",
     "mitmproxy": "git+https://github.com/jvilk/mitmproxy-node.git",
     "query-string": "^6.2.0",
     "ramda": "^0.25.0"
