--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "babel-eslint": "^10.0.1",
     "babel-plugin-module-resolver": "^3.1.1",
     "babel-plugin-transform-object-rest-spread": "^6.23.0",
+    "babel-plugin-transform-runtime": "^6.23.0",
     "babel-preset-env": "^1.7.0",
     "eslint": "^5.8.0",
     "eslint-config-airbnb": "^17.1.0",
@@ -33,6 +34,7 @@
     "rimraf": "^2.6.1"
   },
   "dependencies": {
+    "babel-runtime": "^6.26.0",
     "cheerio": "^1.0.0-rc.2",
     "glob": "^7.1.3",
     "mitmproxy": "git+https://github.com/jvilk/mitmproxy-node.git",
